--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -554,6 +554,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .absolute {
   position: absolute;
 }
@@ -562,12 +566,48 @@ video {
   position: sticky;
 }
 
+.left-\[204px\] {
+  left: 204px;
+}
+
+.left-\[23px\] {
+  left: 23px;
+}
+
+.left-\[328px\] {
+  left: 328px;
+}
+
+.left-\[456px\] {
+  left: 456px;
+}
+
+.left-\[56px\] {
+  left: 56px;
+}
+
 .right-28 {
   right: 7rem;
 }
 
+.right-\[23px\] {
+  right: 23px;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-\[408px\] {
+  top: 408px;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .m-1 {
@@ -615,14 +655,6 @@ video {
   height: 250px;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
 .w-1\/2 {
   width: 50%;
 }
@@ -635,8 +667,20 @@ video {
   width: 20rem;
 }
 
+.w-\[176px\] {
+  width: 176px;
+}
+
 .w-\[20\%\] {
   width: 20%;
+}
+
+.w-\[250px\] {
+  width: 250px;
+}
+
+.w-\[270px\] {
+  width: 270px;
 }
 
 .w-\[38\%\] {
@@ -653,30 +697,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[10\%\] {
-  width: 10%;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[300px\] {
-  width: 300px;
 }
 
 .flex-col {
@@ -719,6 +739,10 @@ video {
   gap: 1.5rem;
 }
 
+.gap-7 {
+  gap: 1.75rem;
+}
+
 .gap-8 {
   gap: 2rem;
 }
@@ -749,13 +773,12 @@ video {
   background-position: center;
 }
 
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-12 {
@@ -773,23 +796,32 @@ video {
   padding-right: 2rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
 .text-center {
   text-align: center;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -802,8 +834,13 @@ body {
   z-index: 10;
 }
 
-.head1{
+.head1 {
   font-weight: 400;
+}
+
+.next{
+  border: 0.5px solid black;
+  border-radius: 4px;
 }
 
 /*** HOME***/
@@ -980,7 +1017,32 @@ body {
 }
 
 .san {
-  height: 4rem;
+  height: 81px;
+}
+
+.first3 {
+  cursor: pointer;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 700ms;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.first3:hover {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-text-opacity: 1;
+  color: rgb(205 162 116 / var(--tw-text-opacity));
+}
+
+.arrows {
+  cursor: pointer;
+  font-size: 30px;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
@@ -991,21 +1053,9 @@ body {
   .md\:hidden {
     display: none;
   }
-
-  .md\:h-10 {
-    height: 2.5rem;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-10 {
-    height: 2.5rem;
-  }
-
-  .lg\:w-\[20\%\] {
-    width: 20%;
-  }
-
   .lg\:gap-0 {
     gap: 0px;
   }
@@ -1015,3 +1065,4 @@ body {
     padding-right: 3rem;
   }
 }
+
