--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -1050,6 +1050,10 @@ body {
   box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.4);
 }
 
+.boxx2 {
+  box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.4);
+}
+
 .bigheader {
   position: relative;
   z-index: 10;
