--- a/Tailwind2/src/input.css
+++ b/Tailwind2/src/input.css
@@ -16,6 +16,13 @@ body {
   box-shadow: 0px 1px 3px 2px rgba(0, 0, 0, 0.4);
 }
 
+
+.boxx2 {
+  box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.4);
+}
+
+
+
 .bigheader {
   position: relative;
   z-index: 10;
