--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -614,6 +614,26 @@ video {
   top: 1rem;
 }
 
+.top-1 {
+  top: 0.25rem;
+}
+
+.-top-6 {
+  top: -1.5rem;
+}
+
+.-top-20 {
+  top: -5rem;
+}
+
+.-top-24 {
+  top: -6rem;
+}
+
+.-top-44 {
+  top: -11rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -695,6 +715,34 @@ video {
   height: 624px;
 }
 
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[480px\] {
+  height: 480px;
+}
+
+.h-\[48px\] {
+  height: 48px;
+}
+
+.h-\[470px\] {
+  height: 470px;
+}
+
+.h-\[450px\] {
+  height: 450px;
+}
+
+.h-\[481px\] {
+  height: 481px;
+}
+
+.h-\[482px\] {
+  height: 482px;
+}
+
 .min-h-\[540px\] {
   min-height: 540px;
 }
@@ -751,10 +799,6 @@ video {
   width: 40%;
 }
 
-.w-\[50\%\] {
-  width: 50%;
-}
-
 .w-\[50px\] {
   width: 50px;
 }
@@ -769,6 +813,22 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[98\%\] {
+  width: 98%;
+}
+
+.w-\[97\%\] {
+  width: 97%;
 }
 
 .cursor-pointer {
@@ -867,6 +927,21 @@ video {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\/images\/childd1_imge\.jpg\'\)\] {
   background-image: url('./images/childd1_imge.jpg');
 }
@@ -887,16 +962,20 @@ video {
   background-position: center;
 }
 
-.p-12 {
-  padding: 3rem;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-\[50px\] {
+  padding: 50px;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-10 {
@@ -939,6 +1018,11 @@ video {
   padding-right: 2.25rem;
 }
 
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -952,11 +1036,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .py-\[20px\] {
@@ -974,12 +1053,22 @@ video {
   padding-bottom: 50px;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.pb-14 {
-  padding-bottom: 3.5rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 
 .pb-5 {
@@ -990,12 +1079,12 @@ video {
   padding-bottom: 2rem;
 }
 
-.pl-\[15px\] {
-  padding-left: 15px;
+.pl-0 {
+  padding-left: 0px;
 }
 
-.pr-\[91\.98px\] {
-  padding-right: 91.98px;
+.pr-0 {
+  padding-right: 0px;
 }
 
 .pt-2 {
@@ -1031,8 +1120,16 @@ video {
   font-size: 17px;
 }
 
+.text-\[21px\] {
+  font-size: 21px;
+}
+
 .text-\[32px\] {
   font-size: 32px;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
 }
 
 .font-semibold {
@@ -1430,7 +1527,6 @@ svg[data-active="true"] {
 }
 
 .about {
-  font-size: 16px;
   letter-spacing: 6px;
   line-height: 27.2px;
   font-weight: 400;
@@ -1441,7 +1537,6 @@ svg[data-active="true"] {
 
 .most {
   font-family: "Oswald", sans-serif;
-  font-size: 32px;
   font-weight: 500;
 }
 
@@ -1470,6 +1565,14 @@ svg[data-active="true"] {
 }
 
 @media (min-width: 768px) {
+  .md\:relative {
+    position: relative;
+  }
+
+  .md\:top-0 {
+    top: 0px;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1482,6 +1585,18 @@ svg[data-active="true"] {
     height: 100vh;
   }
 
+  .md\:w-\[47\%\] {
+    width: 47%;
+  }
+
+  .md\:w-\[53\%\] {
+    width: 53%;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -1490,8 +1605,46 @@ svg[data-active="true"] {
     gap: 0px;
   }
 
+  .md\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .md\:p-\[50px\] {
+    padding: 50px;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:pb-14 {
+    padding-bottom: 3.5rem;
+  }
+
+  .md\:pl-\[15px\] {
+    padding-left: 15px;
+  }
+
+  .md\:pr-\[91\.98px\] {
+    padding-right: 91.98px;
+  }
+
+  .md\:text-\[32px\] {
+    font-size: 32px;
+  }
+
   .md\:text-\[42px\] {
     font-size: 42px;
+  }
+
+  .md\:text-\[16px\] {
+    font-size: 16px;
   }
 }
 
