--- a/Tailwind2/public/style.css
+++ b/Tailwind2/public/style.css
@@ -574,6 +574,10 @@ video {
   top: -11rem;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
 .left-\[204px\] {
   left: 204px;
 }
@@ -679,6 +683,10 @@ video {
   height: 100px;
 }
 
+.h-\[1px\] {
+  height: 1px;
+}
+
 .h-\[200px\] {
   height: 200px;
 }
@@ -701,6 +709,10 @@ video {
 
 .h-\[624px\] {
   height: 624px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .min-h-\[540px\] {
@@ -783,8 +795,8 @@ video {
   cursor: pointer;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -869,11 +881,6 @@ video {
   background-color: rgb(248 248 248 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-header {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -884,24 +891,29 @@ video {
   background-color: rgb(205 162 116 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
 .bg-slate-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+.bg-trans {
+  background-color: 	rgba(0, 0, 0, 0.2);
+}
+
+.bg-\[url\(\'\.\/images\/box1\.jpg\'\)\] {
+  background-image: url('./images/box1.jpg');
+}
+
+.bg-\[url\(\'\.\/images\/box2\.jpg\'\)\] {
+  background-image: url('./images/box2.jpg');
+}
+
+.bg-\[url\(\'\.\/images\/box3\.jpg\'\)\] {
+  background-image: url('./images/box3.jpg');
+}
+
+.bg-\[url\(\'\.\/images\/box4\.jpg\'\)\] {
+  background-image: url('./images/box4.jpg');
 }
 
 .bg-\[url\(\'\.\/images\/childd1_imge\.jpg\'\)\] {
@@ -944,6 +956,11 @@ video {
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -1520,6 +1537,75 @@ svg[data-active="true"] {
   padding: 1rem;
 }
 
+.eko {
+  top: 85%;
+}
+
+/* Initial position for .eko */
+
+.eko {
+  position: absolute;
+  transition: top 0.5s ease-in-out;
+  /* Smooth transition for top property */
+}
+
+/* On hover, move .eko up */
+
+.Eko:hover .eko {
+  top: 10%;
+  /* Target position when hovering */
+}
+
+.Eko:not(:hover) .eko {
+  transition-delay: 0.5s;
+  /* Delay before moving back to default position */
+}
+
+.ekoo {
+  position: absolute;
+  top: 30%;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  visibility: hidden;
+  transition: top 0.8s ease-in-out, opacity 1.5s ease-in-out, visibility 0s 1.5s;
+  transition-delay: 0s;
+}
+
+.Eko:hover .ekoo {
+  opacity: 1;
+  visibility: visible;
+  top: 25%;
+  transition: top 0.3s ease-in-out, opacity 1.5s ease-in-out, visibility 0s 1.5s;
+  transition-delay: 0.5s;
+}
+
+/* *** */
+
+.Alinks {
+  position: absolute;
+  top: 60%;
+  visibility: hidden;
+  transition: top 0.9s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s;
+}
+
+.alinks i {
+  font-size: 0.8em;
+  /* Adjust this value to change the size of the icons */
+}
+
+.Eko:hover .Alinks {
+  top: 50%;
+  opacity: 1;
+  visibility: visible;
+  transition: top 0.3s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+.hover\:bg-transxl:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1561,6 +1647,10 @@ svg[data-active="true"] {
 
   .md\:w-full {
     width: 100%;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
