--- a/Tailwind2/src/input.css
+++ b/Tailwind2/src/input.css
@@ -296,17 +296,19 @@ svg[data-active="true"] {
 /* Initial position for .eko */
 .eko {
   position: absolute;
-
-  transition: top 0.5s ease-in-out; /* Smooth transition for top property */
+  font-size: 24px;
+  font-weight: 500;
+  transition: top 0.6s ease-in-out; /* Smooth transition for top property */
+  line-height: 26.4px;
 }
 
 /* On hover, move .eko up */
 .Eko:hover .eko {
-  top: 10%; /* Target position when hovering */
+  top: 7%; /* Target position when hovering */
 }
 
 .Eko:not(:hover) .eko {
-  transition-delay: 0.5s; /* Delay before moving back to default position */
+  transition-delay: 0.6s; /* Delay before moving back to default position */
 }
 
 .ekoo {
@@ -315,7 +317,7 @@ svg[data-active="true"] {
 
 .ekoo {
   visibility: hidden;
-  transition: top 0.8s ease-in-out, opacity 1.5s ease-in-out, visibility 0s 1.5s;
+  transition: top 0.8s ease-in-out, opacity 1.5s ease-in-out, visibility 0s 1.6s;
   transition-delay: 0s;
 }
 
@@ -330,18 +332,92 @@ svg[data-active="true"] {
 /* *** */
 .Alinks {
   position: absolute;
-  top: 60%;
+  top: 90%;
   visibility: hidden;
-  transition: top 0.9s ease-in-out, opacity 0.8s ease-in-out, visibility 0.8s;
+  transition: top 0.4s ease-in-out, opacity 1.5s ease-in-out, visibility 0s 1.5s;
+  transition-delay: 0s;
 }
 
+.Alinks {
+  @apply flex justify-center gap-7 px-2;
+}
 .alinks i {
-  font-size: 0.8em; /* Adjust this value to change the size of the icons */
+  font-size: 0.8em;
+}
+
+.alinkss i {
+  font-size: 3rem;
 }
 
 .Eko:hover .Alinks {
-  top: 50%;
+  top: 55%;
   opacity: 1;
   visibility: visible;
-  transition: top 0.3s ease-in-out, opacity 0.5s ease-in-out;
+  transition: top 0.3s ease-in-out, opacity 0.2s ease-in-out, visibility 0s 0.7s;
+}
+
+.alinks {
+  width: 128px;
+  /* background-color: blue; */
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.alinks:hover {
+  width: 140px;
+  /* visibility: hidden; */
+  transition: width 0.3s ease-in-out;
+}
+
+.clr {
+  position: absolute;
+  top: 45%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.clrr {
+  position: absolute;
+  top: 45%;
+  left: 20%;
+  transform: translateY(-50%);
+}
+
+.alinks:hover .clr {
+  visibility: hidden;
+  left: 20%;
+  transition: left 0.3s, visibility 0.2s ease-in-out;
+}
+.alinks:hover .clrr {
+  visibility: hidden;
+  left: 40%;
+  transition: left 0.3s, visibility 0.2s ease-in-out;
+}
+/* 
+.alinkss {
+  width: 128px;
+
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.alinkss:hover {
+  width: 170px;
+
+  transition: width 0.3s ease-in-out;
+} */
+
+.house {
+  position: relative;
+  width: 30%;
+  /* background-color: brown; */
+  left: -13%;
+}
+
+.texttt {
+  position: relative;
+  width: 70%;
+  font-size: 13px;
+  line-height: 22.1px;
+  text-transform: uppercase;
+  /* background-color: chartreuse; */
 }
